manifests/e2e-test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-test-app
  namespace: applications
spec:
  selector:
    app: e2e-test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
